--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "express-session": "^1.17.2",
+    "morgan": "~1.9.1",
+    "passport": "^0.5.2",
+    "passport-openidconnect": "^0.1.1"
   },
   "devDependencies": {
     "chai": "^4.3.6",
