--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "express": "~4.16.1",
     "express-session": "^1.17.2",
     "morgan": "~1.9.1",
-    "passport": "^0.5.2",
-    "passport-openidconnect": "^0.1.1"
+    "passport": "0.5.2",
+    "passport-openidconnect": "0.0.2"
   },
   "devDependencies": {
     "chai": "^4.3.6",
